--- a/beyonce_intro.html
+++ b/beyonce_intro.html
@@ -44,8 +44,8 @@
         </tr>
         <tr style="background-color: rgb(129, 149, 187); height: 60px;">
             <td style="width: 70%;"></td>
-            <td></td>
             <td style="width: 30%;"></td>
+            <td style="width: 20%;"></td>
             <td style="width: 10%;"></td>
             <td style="width: 5%;"></td>
         </tr>
@@ -58,7 +58,7 @@
         </tr>
         <tr>
             <td colspan="2">
-                <img src="./beyonce image.png" alt="" >
+                <img src="./beyonce image.png" alt="" style="width: 100%;" >
             </td>
             <!-- <td></td> -->
             <td colspan="3" class="align-bottom">作曲/<br>Carlson (Gad) </td>
