--- a/s20241106/absolute.html
+++ b/s20241106/absolute.html
@@ -6,22 +6,46 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <style>
+        main {
+            width: 100%;
+            height: 1600px;
+        }
+
         .green-box {
             margin: auto;
             position: relative;
             width: 800px;
             height: 800px;
-            background-color: rgb(210, 253, 185);
+            background-color: rgb(148, 192, 158);
+            line-height: 800px;
+            text-align: center;
+            font-size: 40px;
+            font-weight: bold;
+            color: rgb(255, 255, 255);
+            z-index: -1;
+        }
+
+        .side {
+            width: 40px;
+            height: 100px;
+            background-color: rgb(110, 116, 87);
+            border-left: 2px solid white;
+            border-radius: 10px 0px 0px 10px;
+            position: sticky;
+            top: 350px;
+            margin-left: 820px;
+            z-index: 1;
         }
 
         .pink-box {
             width: 150px;
             height: 150px;
             position: absolute;
-            right: 325px;
-            bottom: 325px;
+            right: 15px;
+            bottom: 15px;
             background-color: rgb(252, 214, 219);
             border-radius: 15px;
+
         }
 
         .white-box {
@@ -31,16 +55,75 @@
             position: absolute;
             right: 50px;
             top: 50px;
+
+        }
+
+        .blue-box {
+            width: 150px;
+            height: 150px;
+            background-color: lightblue;
+            border-radius: 15px;
+            position: absolute;
+            top: 15px;
+            left: 15px;
+            line-height: 150px;
+            text-align: center;
+            font-size: 20px;
+            font-weight: bold;
+            color: rgb(255, 255, 255);
+        }
+
+        .yellow-box {
+            width: 150px;
+            height: 150px;
+            background-color: rgb(255, 255, 137);
+            border-radius: 15px;
+            position: absolute;
+            bottom: 15px;
+            left: 15px;
+            line-height: 150px;
+            text-align: center;
+            font-size: 20px;
+            font-weight: bold;
+            color: rgb(165, 149, 128);
+        }
+
+        .brown-box {
+            width: 150px;
+            height: 150px;
+            background-color: rgb(187, 159, 122);
+            border-radius: 15px;
+            position: absolute;
+            top: 15px;
+            right: 15px;
+            line-height: 150px;
+            text-align: center;
+            font-size: 20px;
+            font-weight: bold;
+            color: rgb(255, 255, 255);
         }
     </style>
 </head>
 
 <body>
-    <div class="green-box">
-        <div class="pink-box">
-            <div class="white-box"></div>
+    <main>
+        <div class="side"></div>
+        <div class="green-box">
+            (◍•ᴗ•◍)ゝ
+            <div class="pink-box">
+                <div class="white-box"></div>
+            </div>
+            <div class="blue-box">
+                (*‘ v`*)
+            </div>
+            <div class="yellow-box">
+                (๑ơ ₃ ơ)♥ﾉ </div>
+            <div class="brown-box">
+                (｡◕∀◕｡)
+            </div>
+
         </div>
-    </div>
+    </main>
 </body>
 
 </html>
