--- a/s20241111/container03.html
+++ b/s20241111/container03.html
@@ -21,17 +21,23 @@
         /* 預設寬度(最小)為190px，以下設置其他寬度 */
         /* 當視窗寬度大於576px，設置固定寬度380px */
         @media (min-width: 576px) {
-            .box {width: 380px;}
+            .box {
+                width: 380px;
+            }
         }
 
         /* 當視窗寬度大於768px，設置固定寬度570px */
         @media (min-width: 768px) {
-            .box {width: 570px;}
+            .box {
+                width: 570px;
+            }
         }
 
         /* 當視窗寬度大於992px，設置固定寬度760px*/
         @media (min-width: 992px) {
-            .box {width: 760px;}
+            .box {
+                width: 760px;
+            }
         }
 
         .item {
