--- a/s20241112/input_01.html
+++ b/s20241112/input_01.html
@@ -6,7 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <style>
-        input {
+        /* .text-red{
+            color:red;
+        } */
+        input[type="number"] {
             color: lightblue;
         }
     </style>
