--- a/s20241211/12.html
+++ b/s20241211/12.html
@@ -50,9 +50,8 @@
         }
 
         .img_box {
-            width: 100%;
-            height: 100%;
-
+            width: 180px;
+            height: 160px;
             border-radius: 15px 15px 0px 0px;
             padding: 5px;
             display: flex;
@@ -75,6 +74,14 @@
         p {
             margin-top: 5px;
             font-size: 12px;
+        }
+
+        .intro {
+            height: 60px;
+        }
+
+        .priceClass {
+            margin-bottom: 10px;
         }
 
 
@@ -137,7 +144,7 @@
             <!-- 品名 -->
             <h3>30盎司帶骨牛小排堡</h3>
             <!-- 介紹 -->
-            <p>
+            <p class="intro">
                 起司、番茄、墨西哥辣椒、洋蔥、酸黃瓜、生菜、蜂蜜芥末醬、牛肉多蜜醬
             </p>
             <!-- 單價 -->
@@ -147,8 +154,9 @@
             <!-- 購買數量 -->
             <input class="inputClass" type="number" name="" id="input1" value="0" max="10" min="0">
             <!-- 小計 -->
-            <button class="totalClass" id="total1">
-                0
+            <button>
+                <span class="totalClass" id="total1">0</span>
+                <span>元</span>
             </button>
         </div>
 
@@ -160,7 +168,7 @@
             <!-- 品名 -->
             <h3>JK經典起司牛肉堡</h3>
             <!-- 介紹 -->
-            <p>
+            <p class="intro">
                 起司、番茄、墨西哥辣椒、洋蔥、酸黃瓜、生菜、蜂蜜芥末醬、牛肉多蜜醬
             </p>
             <!-- 單價 -->
@@ -170,8 +178,9 @@
             <!-- 購買數量 -->
             <input class="inputClass" type="number" name="" id="input2" value="0" max="10" min="0">
             <!-- 小計 -->
-            <button class="totalClass" id="total2">
-                0
+            <button>
+                <span class="totalClass" id="total2">0</span>
+                <span>元</span>
             </button>
         </div>
 
@@ -183,7 +192,7 @@
             <!-- 品名 -->
             <h3>爐烤豬膠原腱肉堡</h3>
             <!-- 介紹 -->
-            <p>
+            <p class="intro">
                 起司、番茄、墨西哥辣椒、洋蔥、酸黃瓜、生菜、蜂蜜芥末醬
             </p>
             <!-- 單價 -->
@@ -195,8 +204,9 @@
                 <input class="inputClass" type="number" name="" id="input3" value="0" max="10" min="0">
             </div>
             <!-- 小計 -->
-            <button class="totalClass" id="total3">
-                0
+            <button>
+                <span class="totalClass" id="total3">0</span>
+                <span>元</span>
             </button>
         </div>
 
