--- a/s20241211/06_shop_class.html
+++ b/s20241211/06_shop_class.html
@@ -20,9 +20,6 @@
             text-align: center;
         }
 
-        tr:nth-child(even) {
-            /* background-color: #dddddd; */
-        }
 
         .text-red {
             color: red;
@@ -51,7 +48,7 @@
                 <p>
                     茶
                 </p>
-                <p class="priceClass" id="price1" data-price="200">
+                <p class="priceClass" data-price="200">
                     200元
                 </p>
                 <p>
@@ -60,10 +57,10 @@
 
             </td>
             <td>
-                <input class="inputClass" type="number" name="" id="input1" value="0" max="10" min="0">
+                <input class="inputClass" type="number" name="" value="0" max="10" min="0">
             </td>
             <td>
-                <p class="totalClass" id="total1">
+                <p class="totalClass">
                     0
                 </p>
             </td>
@@ -77,7 +74,7 @@
                 <p>
                     咖啡
                 </p>
-                <p class="priceClass" id="price2" data-price="100">
+                <p class="priceClass" data-price="100">
                     100元
                 </p>
                 <p>
@@ -86,10 +83,10 @@
 
             </td>
             <td>
-                <input class="inputClass" type="number" name="" id="input2" value="0" max="10" min="0">
+                <input class="inputClass" type="number" name="" value="0" max="10" min="0">
             </td>
             <td>
-                <p class="totalClass" id="total2">
+                <p class="totalClass">
                     0
                 </p>
             </td>
@@ -103,7 +100,7 @@
                 <p>
                     礦泉水
                 </p>
-                <p class="priceClass" id="price3" data-price="50">
+                <p class="priceClass" data-price="50">
                     50元
                 </p>
                 <p>
@@ -112,10 +109,10 @@
 
             </td>
             <td>
-                <input class="inputClass" type="number" name="" id="input3" value="0" max="10" min="0">
+                <input class="inputClass" type="number" name="" value="0" max="10" min="0">
             </td>
             <td>
-                <p class="totalClass" id="total3">
+                <p class="totalClass">
                     0
                 </p>
             </td>
@@ -176,9 +173,9 @@
             }
 
             // 1.bind
-            const price1 = $('#price1');
-            const input1 = $('#input1');
-            const total1 = $('#total1');
+            // const price1 = $('#price1');
+            // const input1 = $('#input1');
+            // const total1 = $('#total1');
 
             const priceClass = $('.priceClass');
             const inputClass = $('.inputClass');
